# lnurl-cli

./: README.md  pyproject.toml
.github/workflows/: format.yml  mypy.yml
lnurl_cli/: cli.py
